src/test/deca/context/invalid/Obj/cast-inexistant.deca
// Description:
//    Cast en une classe qui n'est pas définie
//
// Résultat:
//?
//
{
    int obj;
    obj = (classe) obj;
}